--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#container {
+   min-height:100%;
+   position:relative;
+}
+#header {
+   
+   padding:10px;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   
+}
+
 /* Pen Title */
 .pen-title {
   padding: 50px 0;
@@ -5162,7 +5182,7 @@ div.wijmo-wijmenu .wijmo-wijmenu-child .wijmo-wijmenu-text
   padding:5px 17px;
   text-decoration:none;
   text-shadow:0px 1px 0px #810e05;
-}
+  
 .btDel:hover {
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
   background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
