--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
 #container {
    min-height:100%;
    position:relative;
@@ -491,7 +496,7 @@ nav.main-menu.expanded {
   position: absolute;
   top: 0;
   bottom: 0;
-  height: 100%;
+  height: 91%;
   left: 0;
   width: 60px;
   overflow: hidden;
@@ -5182,7 +5187,7 @@ div.wijmo-wijmenu .wijmo-wijmenu-child .wijmo-wijmenu-text
   padding:5px 17px;
   text-decoration:none;
   text-shadow:0px 1px 0px #810e05;
-  
+}
 .btDel:hover {
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
   background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
