--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
 .fa-2x {
   font-size: 2em;
 }
-
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 
 body {
   background: #e9e9e9;
@@ -16,29 +19,44 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
-   margin:0;
-   padding:0;
-   height:100%;
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
-#container {
-   min-height:100%;
-   position:relative;
+
+.main {
+  margin: 0 auto;
+  padding-top: 64px;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
-#header {
-   
-   padding:10px;
+
+.main h1 {
+  margin-top: 0;
 }
-#body {
-   padding:10px;
-   padding-bottom:60px;   /* Height of the footer */
-}
-#footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
-   
+
+/**
+ * Footer Styles
+ */
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0px;
+  background-color: #efefef;
+  text-align: center;
 }
 
 /* Pen Title */
