--- a/css/style2.css
+++ b/css/style2.css
@@ -1,32 +1,47 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+
+
+.bar {
+    border-bottom: 3px dashed #808080;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-li {
-    float: left;
-    border-right:1px solid #bbb;
-}
-
-li:last-child {
-    border-right: none;
-}
-
-li a {
-    display: block;
-    color: white;
+.login {
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    font-size: 14pt;
+    font-weight: bold;
+    width: 170px;
+    color: #000;
 }
 
-li a:hover:not(.active) {
-    background-color: #111;
+.cell-TB {
+    border-right:1px solid #FFFFFF;
+    border-bottom:1px solid #FFFFFF;
+    text-align:center;
+    font-weight:bold;
+    color:#FFF;
 }
 
-.active {
-    background-color: #4CAF50;
+.cell-Time {
+    background-color:#FFFFFF;
+    height:50px;
+}
+
+.cell-Day {
+    background-color:#808080;
+    font-weight:bold;
+    color:#FFF;
+}
+
+.cell-Course {
+    text-align:center;
+    background-color:#C0D0FF;
+    color:#000;
+    font-weight:bold;
+}
+
+.cell-Bg {
+    background-color:#F0F0F0;
+    color:#000;
+    height:50px;
 }
